--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,9 @@
 }
 
 .main {
-  width: 25rem;
-  height: 35rem;
-  margin: 2rem auto;
+  width: 30rem;
+  height: 40rem;
+  margin: 30px auto;
   background: linear-gradient(
     45deg,
     #f48b29 46%,
@@ -31,5 +31,5 @@
   text-align: center;
   color: #fff;
   font-size: 1.5rem;
-  padding: 5px;
+  padding: 5px 0 0 0;
 }
